sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:9: error: type mismatch;
 found   : Unit
 required: Boolean
    if(i=0){i=i+1}
        ^