sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i=0
  while (i!=getValueCount()-1){
    if (isSmaller(i,i+1)){
      i=i+1
      swap(i,i+1)
    }
    if(i=0){i=i+1}
    else (i=i-1)
  }
}